<resources>
    <string name="app_name" translatable="false">Smart Meter</string>

    <string name="btn_start">START</string>
    <string name="btn_counters">Counters</string>
    <string name="btn_values">Edit values</string>
    <string name="btn_history">History</string>
    <string name="btn_export">Export to Excel</string>
    <string name="btn_changeDate">Change date</string>
    <string name="btn_saveValues">Save</string>

    <string name="btn_choose">All companies</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Clear</string>

    <string name="btn_send_mail">Send</string>
    <string name="checkbox_set_as_default">Set as default</string>

    <string name="title_company">Company</string>
    <string name="title_new_company">New company</string>
    <string name="title_or">or</string>
    <string name="title_company_dots">Company:</string>
    <string name="title_counter_name">Counter name</string>
    <string name="title_counter_dots">Counter:</string>
    <string name="title_previousValue">Previous</string>
    <string name="title_currentValue">Current:</string>
    <string name="title_values">Counter value</string>
    <string name="title_resultValue">Difference:</string>
    <string name="title_floor">Floor:</string>

    <string name="title_editing">Edition</string>

    <string name="title_counters">Counters</string>

    <string name="title_review_values">Counter values</string>

    <string name="title_excel">Create Excel</string>
    <string name="title_mail_to">Mail to:</string>

    <string name="title_editing_counter_data">Edit counter info</string>

    <!--    Scanning    -->
    <string name="scan_prompt">Scan QR code to verify a counter</string>
    <string name="scan_this_counter_has_already_been_written_down">This counter has already been written down</string>
    <string name="scan_error_line">Counter not found, please try again</string>

    <!--    Add counter activity    -->
    <string name="title_newCounter">New counter</string>
    <string name="title_newRoom">Room</string>
    <string name="title_newMultiplier">Multiplier</string>
    <string name="title_newFloor">Floor</string>

    <string name="hint_previousValue">Enter value</string>
    <string name="hint_currentValue">Enter value</string>
    <string name="hint_mail">Enter email</string>
    <string name="hint_search">Search</string>

    <string name="item_title_counter">"Counter: "</string>
    <string name="item_title_room">"| Room: "</string>
    <string name="item_title_floor">"Floor: "</string>
    <string name="item_title_multiplier">"| Multiplier: "</string>

    <string name="cd_goBack">Back</string>
    <string name="cd_qr">QR Code</string>

    <!--    Values history activity    -->

    <string name="history_id" translatable="false">ID</string>
    <string name="history_putDate">Date</string>
    <string name="history_prevValue">Prev</string>
    <string name="history_currValue">Curr</string>
    <string name="history_difference">Diff</string>

    <!--  Alerts  -->

    <string name="alert_title_warning">Warning</string>
    <string name="alert_title_info">Info</string>
    <string name="alert_title_error">Error</string>
    <string name="alert_title_is_it_correct">Is it correct?</string>
    <string name="alert_error_database">Database error. Please, reload.</string>
    <string name="alert_YES">Yes</string>
    <string name="alert_NO">No</string>
    <string name="alert_CLOSE">Close</string>
    <string name="alert_OK">OK</string>
    <string name="alert_are_you_sure">Are you sure?</string>
    <string name="alert_values_not_found">Data not found</string>
    <string name="alert_values_not_found_content">There was no data reading from the selected meter</string>

    <!--  Toasts  -->

    <string name="toast_success">Success</string>
    <string name="toast_error">Error</string>
    <string name="toast_successfully_updated">Updated successfully</string>
    <string name="toast_successfully_deleted">Deleted successfully</string>
    <string name="toast_counter_not_found">Counter not found</string>
    <string name="toast_failed_to_update">Updating error</string>
    <string name="toast_failed_to_delete">Deletion error</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="title_date">Date</string>
    <string name="title_counter">Counter</string>
    <string name="title_previous">Previous</string>
    <string name="title_current">Current</string>
    <string name="title_difference">Difference</string>

    <!--  Excel  -->

    <string name="excel_id" translatable="false">ID</string>
    <string name="excel_company_name">Company name</string>
    <string name="excel_room_code">Room code</string>
    <string name="excel_floor">Floor</string>
    <string name="excel_multiplier">Multiplier</string>
    <string name="excel_counter_code">Counter code</string>
    <string name="excel_inventory_date">Inventory date</string>
    <string name="excel_current_value">Current value</string>
    <string name="excel_previous_value">Previous value</string>
    <string name="excel_difference">Difference</string>
    <string name="excel_total">Total</string>

</resources>