<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    tools:context=".activities.ReviewValuesActivity">

    <TextView
        android:id="@+id/titleCounters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/abhayalibre_medium"
        android:text="@string/title_review_values"
        android:textAlignment="center"
        android:textColor="@color/text_light"
        android:textSize="50sp" />

    <Spinner
        android:id="@+id/companyChooseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:background="@color/spinner_bg_grey" />

    <Spinner
        android:id="@+id/counterChooseList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:background="@color/spinner_bg_grey" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@color/bg_dark"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/history_id"
            android:textColor="@color/text_light"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/history_putDate"
            android:textColor="@color/text_light"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/history_currValue"
            android:textColor="@color/text_light"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/history_prevValue"
            android:textColor="@color/text_light"
            android:textSize="25sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/history_difference"
            android:textColor="@color/text_light"
            android:textSize="25sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/listValues"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:background="@color/bg"
        android:padding="2dp" />

</LinearLayout>