<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    android:paddingVertical="10dp"
    android:paddingHorizontal="18dp"
    tools:context=".adapters.CountersListAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="11111"
            android:textColor="@color/text_dark"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/item_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="Example"
            android:textColor="@color/text_dark"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/item_title_counter"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="000"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/item_title_room"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="0"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/item_title_floor"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="0"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="@string/item_title_multiplier"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_multiplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhayalibre_medium"
            android:text="0"
            android:textColor="@color/spinner_text_grey"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>